--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.25",
@@ -56,6 +55,13 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.2"
+    "@testing-library/react": "^14.0.0",
+    "@types/uuid": "^9.0.2",
+    "cypress": "^13.4.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "fetch-mock": "^9.11.0",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
