--- a/package.json
+++ b/package.json
@@ -26,19 +26,17 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.77.4",
     "source-map-loader": "^4.0.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-"deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -67,8 +65,6 @@
     "gh-pages": "^6.0.0",
     "jest": "^27.5.1",
     "react-test-renderer": "^18.2.0",
-    "redux-mock-store": "^1.5.4",
-    "deploy": "gh-pages -d build"
+    "redux-mock-store": "^1.5.4"
   }
-  
 }
