--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "./",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -18,11 +19,12 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "hoist-non-react-statics": "^3.3.2",
-    "react": "^18.2.0",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
