--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-yandex-metrika": "^2.6.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.77.4",
